modification du profil

--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -9,8 +9,11 @@
     android:layout_height="match_parent"
     tools:context=".ProfilActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <com.google.android.material.imageview.ShapeableImageView
+        app:shapeAppearanceOverlay="@style/BordArrondi"
+        app:strokeWidth="4dp"
+        android:padding="5dp"
+        app:strokeColor="@color/purple_200"
         android:scaleType="centerCrop"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -30,4 +33,5 @@
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
 </LinearLayout>
