--- a/app/src/main/res/layout/activity_modifier_profil.xml
+++ b/app/src/main/res/layout/activity_modifier_profil.xml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ModifierProfilActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/editTextMdps1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Ancien mot de passe"
+
+        android:layout_marginTop="10dp"/>
+
+    <EditText
+        android:id="@+id/editTextMdps2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Nouveau"
+
+        android:layout_marginTop="10dp"/>
+
+    <EditText
+        android:id="@+id/editTextMdps3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Confirmer"
+        android:layout_marginTop="10dp"/>
+    <Button
+
+        android:hint="Modifier"
+        android:id="@+id/btnModif"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+</LinearLayout>
